@@ -144,7 +144,7 @@ public class SodaCli {
             if (os.contains("Windows")) {
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             } else {
-                Runtime.getRuntime().exec("clear");
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
             }
         } catch (IOException e) {
             System.err.println("Clear screen command could not be executed");
